# storage/api-docs/api-docs.json
@@ -361,6 +361,44 @@
                 ]
             }
         },
+        "/api/password/generate": {
+            "post": {
+                "tags": [
+                    "Password"
+                ],
+                "summary": "Generate a secure password",
+                "operationId": "5dc8837f9c03705eef9181411ece457e",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "length": {
+                                        "description": "Length of the password to generate",
+                                        "type": "integer"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Generated password"
+                    },
+                    "403": {
+                        "description": "User does not have the necessary functionality"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/api/users": {
             "get": {
                 "tags": [
